# drug_mentions_pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/output/: drug_graph.json
drug_mentions_pipeline/: __init__.py  config.py  main.py
drug_mentions_pipeline/extract/: __init__ .py  extract.py
drug_mentions_pipeline/features/: __init__.py  journal_analyzer.py
drug_mentions_pipeline/transform/: __init__.py  build_graph.py  mention_detector.py
drug_mentions_pipeline/utils/: __init__.py  logging_utils.py
tests/: __init__.py
tests/integration/: test_full_pipeline.py
